--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,2 @@
 theme: jekyll-theme-cayman
-title: Cayman theme
-description: Cayman is a clean, responsive theme for GitHub Pages.
+title: Unai Lopez-Novoa
