--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-cayman
 title: Unai Lopez-Novoa
-description: Irakasle Atxikia, Euskal Herriko Unibertsitatea
+description: Irakasle Atxikia Euskal Herriko Unibertsitatean
